MDEV-7166: innodb.innodb-page_compression_zip fails in buildbot

Analysis: If innodb_use_trim is not enabled or system does not
support fallocate to make persistent trim, we should always
write full page not only partial pages.